--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ $(document).ready(function(){
 <script>
 $('#searchBar').keyup(function() {
   var search_term = $('#searchBar').val();
-  $('.body').removeHighlight().highlight(search_term);
+  $('.specs-table').removeHighlight().highlight(search_term);
 });
 </script>
 
@@ -284,8 +284,8 @@ $('#searchBar').keyup(function() {
 	<div class="mb">
 		<div style="display: flex; justify-content: center; height: 250px;">
 			<div class="adsbyvli" data-ad-slot="vi_1100191592" data-id="vi_1100191592_1" style="visibility: visible !important; opacity: 1 !important; margin: 0px auto !important; display: flex !important; justify-content: center !important; align-items: center !important; width: 300px !important; height: initial !important; min-height: 250px !important;"><vli id="container_vi_1100191592_1" style="display:block!important;position:relative!important;margin:0 auto!important;visibility: visible;"><vli style="visibility: visible;" id="vi_1100191592_1" data-google-query-id="CKTFlLLA0PoCFXucSwUd89wMbw"><div id="google_ads_iframe_/21766281334/11001_Nanoreview.net/11001_Nanoreview.net_1_7__container__" style="border: 0pt none; display: inline-block; width: 300px; height: 250px;"><iframe frameborder="0" src="https://9df23c114397b83cc93c7b08fcd49884.safeframe.googlesyndication.com/safeframe/1-0-38/html/container.html" id="google_ads_iframe_/21766281334/11001_Nanoreview.net/11001_Nanoreview.net_1_7" title="3rd party ad content" name="" scrolling="no" marginwidth="0" marginheight="0" width="300" height="250" data-is-safeframe="true" sandbox="allow-forms allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts allow-top-navigation-by-user-activation" role="region" aria-label="Advertisement" tabindex="0" data-google-container-id="6" style="border: 0px; vertical-align: bottom;" data-load-complete="true"></iframe></div></vli><iframe id="debug_vi_1100191592_1" frameborder="no" scrolling="no" allowtransparency="true" hidefocus="true" marginwidth="0" marginheight="0" topmargin="0" leftmargin="0" style="width: 100%; height: 100%; position: absolute; background-color: rgba(255, 255, 255, 0.8); top: 0px; left: 0px; z-index: 10000; display: none !important; opacity: 0 !important;"></iframe><vli id="__icon_vi_1100191592_1" style="display: none !important;"><iframe class="vliIgnore" frameborder="no" scrolling="no" allowtransparency="true" hidefocus="true" marginwidth="0" width="16" height="16" marginheight="0" topmargin="0" leftmargin="0"></iframe></vli></vli></div> 
-			<script>(vitag.Init = window.vitag.Init || []).push(function () { viAPItag.display("vi_1100191592") })</script>
-		</div>
+		
+</div>
 	</div>
       <div style="padding: 0 16px 12px; text-align: center;"> 
         <h2 class="title-h2" id="specs">Full specifications</h2>
@@ -304,8 +304,8 @@ $('#searchBar').keyup(function() {
 			<tbody>
 				
 							<tr>
-								<td class="cell-h">Type</td>
-								<td class="cell-s">AMOLED</td>
+								<td class="cell-h" style="border:1px solid black">Type</td>
+								<td class="cell-s" style="border:1px solid black">AMOLED</td>
 							</tr>
 						
 							<tr>
