--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ $('#searchBar').keyup(function() {
 <!-- .................................................................................   -->
   
   <style> td{border:1px solid black;border-spacing:10px} 
-          div{display:none}</style>
+          div,caption{display:none}</style>
   
   <article id="the-app">
 		
@@ -442,7 +442,7 @@ $('#searchBar').keyup(function() {
 		</div>
 		
 	</div>
-		<table class="specs-table">
+		
 			
 			<tbody>
 				
@@ -1266,7 +1266,7 @@ $('#searchBar').keyup(function() {
 		<div style="display: flex; justify-content: center; height: 250px;">
 			<div class="adsbyvli" data-ad-slot="vi_1100142473" data-id="vi_1100142473_1" style="visibility: visible !important; opacity: 1 !important; margin: 0px auto !important; display: flex !important; justify-content: center !important; align-items: center !important; width: 300px !important; height: initial !important; min-height: 250px !important;"><vli id="container_vi_1100142473_1" style="display:block!important;position:relative!important;margin:0 auto!important;visibility: visible;"><vli style="display:block;visibility: visible;" id="vi_1100142473_1"></vli><iframe id="debug_vi_1100142473_1" frameborder="no" scrolling="no" allowtransparency="true" hidefocus="true" marginwidth="0" marginheight="0" topmargin="0" leftmargin="0" style="width: 100%; height: 100%; position: absolute; background-color: rgba(255, 255, 255, 0.8); top: 0px; left: 0px; z-index: 10000; display: none !important; opacity: 0 !important;"></iframe><vli id="__icon_vi_1100142473_1" style="display: none !important;"><iframe class="vliIgnore" frameborder="no" scrolling="no" allowtransparency="true" hidefocus="true" marginwidth="0" width="16" height="16" marginheight="0" topmargin="0" leftmargin="0"></iframe></vli></vli></div> 
 			<script>(vitag.Init = window.vitag.Init || []).push(function () { viAPItag.display("vi_1100142473") })</script>
-		</div>
+		</div></span>
 	</article>
   
   
