--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@ $(document).ready(function(){
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://johannburkard.de/resources/Johann/jquery.highlight-4.js"></script>
 
-<input class="form-control" type="search" id="searchBar" name="searchQuery" placeholder="Search for name...">
-<div class='monitor'>Lorem ipsum "dolor" dolor</div>
+<input class="form-control" type="search" id="searchBar" name="searchQuery" placeholder="Search for name..."></input>
+
 <script>
 $('#searchBar').keyup(function() {
   var search_term = $('#searchBar').val();
@@ -155,7 +155,8 @@ $('#searchBar').keyup(function() {
 <!-- .................................................................................   -->
   
   <style> td{border:1px solid black;border-spacing:10px} 
-          div,caption{display:none}</style>
+          div,caption{display:none}
+          div#dtable{display:block}</style>
   
   <article id="the-app">
 		
@@ -259,7 +260,7 @@ $('#searchBar').keyup(function() {
 					
 				</div>
 			</div>
-		<span class="table-responsive">	
+		<div id="dtable" class="table-responsive">	
 		<table class="table specs-table">
 			
 			<tbody>
@@ -493,7 +494,7 @@ $('#searchBar').keyup(function() {
 						
 			</tbody>
 		</table>
-	</span>
+	</div>
 		
 		
 		<div class="card-block">
